Login Layout change

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#424242</color>
     <color name="colorPrimaryDark">#1b1b1b</color>
-    <color name="colorAccent">#ff3d00</color>
+    <color name="colorAccent">#3c9ef4</color>
 </resources>
