--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,28 +14,109 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:id="@+id/ll1"
         android:layout_alignParentStart="true">
 
+        <TextView
+            android:text="Welcome Volunteers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/welcome"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textStyle="normal|bold"
+            android:paddingBottom="30dp"
+            android:textSize="24sp"
+            android:textColor="@android:color/background_light" />
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
+            android:layout_below="@id/welcome"
             android:onClick="login"
+            android:paddingBottom="20dp"
             android:src="@drawable/gplus"/>
     </LinearLayout>
 
     <LinearLayout
+        xmlns:android = "http://schemas.android.com/apk/res/android"
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:gravity = "center"
+        android:layout_below="@+id/ll1"
+        android:orientation = "horizontal">
+
+        <View
+            android:layout_width = "75dp"
+            android:layout_height = "3dp"
+            android:background = "#000"/>
+
+        <TextView
+            android:id = "@+id/tv"
+            android:layout_width = "wrap_content"
+            android:layout_height = "wrap_content"
+            android:layout_gravity = "center"
+            android:layout_marginLeft = "5dp"
+            android:layout_marginRight = "5dp"
+            android:gravity = "center"
+            android:text = "or"
+            android:textSize = "24sp"/>
+
+        <View
+            android:layout_width = "75dp"
+            android:layout_height = "3dp"
+            android:background = "#000"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:orientation="vertical"
+        android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/ll2"
         android:layout_below="@+id/ll1">
-        
 
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:id="@+id/et_user">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email Address"
+                android:textColor="@android:color/black"
+                android:textStyle="normal|bold" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/et_user"
+            android:paddingBottom="10dp"
+            android:id="@+id/et_pass">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:textStyle="normal|bold" />
+        </android.support.design.widget.TextInputLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:textAlignment="center"
+            android:background="@color/colorAccent"
+            android:textSize="20sp"
+            android:layout_below="@id/et_pass"
+            android:textColor="@android:color/background_light" />
     </LinearLayout>
 </RelativeLayout>
