--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logbg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -30,8 +29,7 @@
             android:textAlignment="center"
             android:textStyle="normal|bold"
             android:paddingBottom="30dp"
-            android:textSize="24sp"
-            android:textColor="@android:color/background_light" />
+            android:textSize="24sp" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="match_parent"
@@ -91,9 +89,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email Address"
-                android:textColor="@android:color/black"
-                android:textStyle="normal|bold" />
+                android:hint="Email Address" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -106,8 +102,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
-                android:textStyle="normal|bold" />
+                android:hint="Password" />
         </android.support.design.widget.TextInputLayout>
         <Button
             android:layout_width="match_parent"
@@ -116,7 +111,6 @@
             android:textAlignment="center"
             android:background="@color/colorAccent"
             android:textSize="20sp"
-            android:layout_below="@id/et_pass"
-            android:textColor="@android:color/background_light" />
+            android:layout_below="@id/et_pass" />
     </LinearLayout>
 </RelativeLayout>
