--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
             android:layout_gravity="center"
             android:layout_below="@id/welcome"
             android:onClick="login"
+            android:id="@+id/gPlus"
             android:paddingBottom="20dp"
             android:src="@drawable/gplus"/>
     </LinearLayout>
@@ -108,6 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
+            android:id="@+id/login"
             android:textAlignment="center"
             android:background="@color/colorAccent"
             android:layout_below="@id/et_pass" />
