Registration page and api done

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
             android:id="@+id/login"
             android:textAlignment="center"
             android:background="@color/colorAccent"
+            android:textColor="@color/white"
             android:layout_below="@id/et_pass" />
     </LinearLayout>
 </RelativeLayout>
