--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,21 +20,51 @@
                 android:layout_height="wrap_content"
                 android:hint="Phone Number"
                 android:id="@+id/phone" />
+
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_marginBottom="50sp"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/layout1"
-            android:layout_alignParentLeft="true">
-
-            <EditText
+            android:id="@+id/ti1"
+            android:layout_below="@+id/layout1">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="College Name"
-                android:id="@+id/college" />
+                android:orientation="horizontal"
+                android:weightSum="1">
+                <AutoCompleteTextView
+                    android:id="@+id/cname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="College name"
+                    android:layout_weight="1" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add"
+                    android:id="@+id/addClg"
+                    android:background="@color/colorAccent"
+                    android:textColor="@color/white"
+                    android:visibility="invisible"
+                    />
+            </LinearLayout>
+
         </android.support.design.widget.TextInputLayout>
+        <!--<android.support.design.widget.TextInputLayout-->
+            <!--android:layout_marginBottom="50sp"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/layout1"-->
+            <!--android:layout_alignParentLeft="true">-->
+
+            <!--<EditText-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:hint="College Name"-->
+                <!--android:id="@+id/college" />-->
+        <!--</android.support.design.widget.TextInputLayout>-->
 
     </LinearLayout>
 
