--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,6 +11,10 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="Events" />
         <item
+            android:id="@+id/nav_forum"
+            android:icon="@drawable/ic_description_white_24dp"
+            android:title="Forum" />
+        <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Manage" />
