--- a/app/src/main/res/layout/content_forum.xml
+++ b/app/src/main/res/layout/content_forum.xml
@@ -28,7 +28,8 @@
         <ImageView
             android:id="@+id/addMessageImageView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_add_a_photo_black_24dp"/>
 
         <EditText
             android:layout_width="0dp"
@@ -40,7 +41,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
             android:text="SEND"
+            android:textColor="@color/white"
             android:enabled="false"
             android:id="@+id/sendButton"
             android:layout_gravity="bottom"/>
