--- a/app/src/main/res/layout/activity_choose_event.xml
+++ b/app/src/main/res/layout/activity_choose_event.xml
@@ -10,4 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="amrith.com.volunteers.ChooseEvent">
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/rv_event"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
