--- a/app/src/main/res/layout/activity_helper.xml
+++ b/app/src/main/res/layout/activity_helper.xml
@@ -7,11 +7,7 @@
     android:layout_height="match_parent"
     tools:context="amrith.com.volunteers.Helper">
 
-    <FrameLayout
-        android:id="@+id/content_frame_helper"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:elevation="8dp"/>
+    <include layout="@layout/content_helper" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottom_navigation"
