--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -3,6 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <TextView
+        android:text="Volunteers In : "
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView"
+        android:id="@+id/spinner"
+        android:spinnerMode="dialog"
+        android:textAlignment="center" />
+
     <Button
         android:text="Add Volunteer"
         android:layout_width="match_parent"
@@ -11,4 +30,5 @@
         android:background="@color/colorAccent"
         android:textColor="@color/white"
         android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
