--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:layout_marginBottom="15dp">
 
     <TextView
         android:text="Volunteers In : "
@@ -18,7 +18,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
-        android:id="@+id/spinner"
+        android:id="@+id/clg_spinner"
         android:spinnerMode="dialog"
         android:textAlignment="center" />
 
