--- a/app/src/main/res/drawable/grad.xml
+++ b/app/src/main/res/drawable/grad.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#37475E"
-        android:endColor="#1B232E"
-        android:angle="90"/>
+        android:startColor="#3494E6"
+        android:endColor="#EC6EAD"
+        android:angle="45"/>
 </shape>
