--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AddButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlHighlight">@color/grad1</item>
+        <item name="colorButtonNormal">@color/grad2</item>
+    </style>
+
 </resources>
