--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -22,6 +22,14 @@
         android:spinnerMode="dialog"
         android:textAlignment="center" />
 
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/clg_spinner"
+        android:id="@+id/rv_volt">
+
+    </android.support.v7.widget.RecyclerView>
+
     <Button
         android:text="Add Volunteer"
         android:layout_width="match_parent"
