--- a/app/src/main/res/layout/activity_helper.xml
+++ b/app/src/main/res/layout/activity_helper.xml
@@ -14,8 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/colorPrimary"
-        app:itemIconTint="@color/white"
-        app:itemTextColor="@color/white"
+        app:itemBackground="@color/lines_grey"
+        app:itemIconTint="@color/colorAccent"
+        app:itemTextColor="@color/black"
         app:menu="@menu/bottom_nav" />
 </RelativeLayout>
