--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -14,13 +14,16 @@
 
     <Spinner
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
+        android:text="Poda"
+        android:background="@color/white"
+        android:textColor="@color/black"
         android:id="@+id/clg_spinner"
         android:spinnerMode="dialog"
-        android:textAlignment="center" />
+        android:layout_height="wrap_content"
+        android:elevation="5dp" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
