--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -17,13 +17,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
-        android:text="Poda"
-        android:background="@color/white"
-        android:textColor="@color/black"
+        android:text="College"
+        android:background="@color/colorAccent"
         android:id="@+id/clg_spinner"
         android:spinnerMode="dialog"
-        android:layout_height="wrap_content"
-        android:elevation="5dp" />
+        android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
