--- a/app/src/main/res/layout/content_add_volunteer.xml
+++ b/app/src/main/res/layout/content_add_volunteer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="18dp">
@@ -14,6 +15,7 @@
 
     <Spinner
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
@@ -21,7 +23,8 @@
         android:background="@color/colorAccent"
         android:id="@+id/clg_spinner"
         android:spinnerMode="dialog"
-        android:layout_height="wrap_content" />
+        android:visibility="visible"
+        android:textAlignment="center" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
