--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:background="@drawable/grad_login"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="amrith.com.volunteers.LoginActivity">
@@ -112,7 +111,7 @@
             android:text="Login"
             android:id="@+id/login"
             android:textAlignment="center"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:textColor="@color/white"
             android:layout_below="@id/et_pass" />
     </LinearLayout>
