--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Notification Tools" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_menu_send"
