--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,10 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@drawable/grad_nav"
+        android:background="@drawable/polygon"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:itemTextColor="#eceff1"
+        app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/activity_main_drawer" />
 </android.support.v4.widget.DrawerLayout>
