--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -6,9 +6,18 @@
     android:layout_width="match_parent"
     android:background="@color/lines_grey"
     android:layout_height="match_parent">
+    <Button
+        android:text="Reload Feed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reload"
+        android:background="@color/colorAccent"
+        android:textColor="@color/white"
+        android:layout_alignParentTop="true"
+        />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_feed"
+        android:layout_below="@+id/reload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 </RelativeLayout>
